--- a/trái tim.html
+++ b/trái tim.html
@@ -24,7 +24,7 @@
 
   margin: 0;
 
-  background: url(img/background.png);
+  background: url(https://www.canva.com/design/DAGPY-VyJfk/-Nv6YFhQcaoRgZrMFnOOsg/view?utm_content=DAGPY-VyJfk&utm_campaign=designshare&utm_medium=link&utm_source=editor);
 
 }
 
